Archive2/07/692ede48da197e/output
main.cpp:2:22: error: 'string_literals' is not a namespace-name
 using namespace std::string_literals;
                      ^
main.cpp:2:37: error: expected namespace-name before ';' token
 using namespace std::string_literals;
                                     ^
main.cpp: In function 'int main()':
main.cpp:7:22: error: unable to find string literal operator 'operator"" s'
     std::string s1 = "abc\0\0def"s; // form the string "abc\0\0def"
                      ^
